# xml2excel

./: .gitignore  .lintstagedrc  CHANGELOG.md  LICENSE  README.md  cliff.toml  justfile  package.json  pyproject.toml  ruff.toml  tombi.toml  x.xlsx
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: release.yml
.zed/: settings.json
assets/themes/: shadcn.json
src/xml2excel/: aliases.py  app.py  consts.py  icons.py  main.py  theme.py
src/xml2excel/commands/: export_files.py  import_files.py
src/xml2excel/components/: App.py  Button.py  CheckBox.py  Collapsible.py  DisableColumnsItem.py  DisableColumnsList.py  ExportFilesButton.py  ImportFilesButton.py  IndexOption.py  MergeOption.py  NumberFilesImported.py  PrefixOption.py  RecursiveOption.py  Root.py  ScrollArea.py  ToggleThemeButton.py  Window.py  __init__.py
src/xml2excel/components/tree/: BaseColumnModel.py  ColumnTree.py  ColumnTreeLeaf.py  ColumnTreeRoot.py  PropagationDirection.py  PropagationMode.py
src/xml2excel/manager/: config.py  context.py  store.py
src/xml2excel/utils/: flatdict.py  flatdict2excel.py  flatten_xml.py  path.py  pd.py  var.py  worker.py  xml2flatdict.py
styles/: global.qss
