[project]
name = 'xml2excel'
version = '0.2.0'
description = 'Add your description here'
requires-python = '>=3.13'
dependencies = [
    'lxml==6.0.2',
    'pyside6==6.10.2',
    'xlsxwriter==3.2.9',
]

[dependency-groups]
dev = [
    'git-cliff>=2.12.0',
    'microsoft-python-type-stubs',
    'pyinstaller>=6.19.0',
    'ruff>=0.15.0',
    'rust-just>=1.46.0',
    'tabulate>=0.9.0',
    'tombi>=0.7.28',
    'ty>=0.0.15',
    'types-lxml>=2026.2.16',
]

[build-system]
requires = ['uv_build>=0.10.4,<0.11.0']
build-backend = 'uv_build'

[tool.uv.sources]
microsoft-python-type-stubs = { git = 'https://github.com/microsoft/python-type-stubs.git' }

[tool.uv.build-backend]
module-name = 'xml2excel'
module-root = 'src'
