[project]
name = 'xml2excel'
version = '0.3.2'
description = 'Add your description here'
requires-python = '>=3.13'
dependencies = [
    'lxml==6.0.2',
    'pyside6==6.11.0',
    'xlsxwriter==3.2.9',
]

[dependency-groups]
dev = [
    'git-cliff>=2.12.0',
    'microsoft-python-type-stubs',
    'pillow>=12.1.1',
    'pyinstaller>=6.19.0',
    'ruff>=0.15.7',
    'rust-just>=1.48.0',
    'tabulate>=0.10.0',
    'tombi>=0.9.9',
    'ty>=0.0.25',
    'types-lxml>=2026.2.16',
]

[build-system]
requires = ['uv_build>=0.10.4,<0.11.0']
build-backend = 'uv_build'

[tool.uv.sources]
microsoft-python-type-stubs = { git = 'https://github.com/microsoft/python-type-stubs.git' }

[tool.uv.build-backend]
module-name = 'xml2excel'
module-root = 'src'
